--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@
 body {
 	font: 1.2em/1.35 Baskerville, Georgia, "Times New Roman", Times, serif;
 	color: #444;
-	background-color: #ececec;
+	background-color: #ffffff;
 }
 
 code {
